# pytest-qfield

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copyright-header.txt  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: create_fake_resource.py
src/pytest_field_test_utils/: env.py
src/pytest_qfield/: __init__.py  main_window.qml  plugin.py  qfield_resources.py  qfieldbot.py  stub_interface.py
src/pytest_qfield/stub_interface/: qfield_stubs.py  qgis_stubs.py
test/: conftest.py  test_javascript_functions.py  test_plugin.py  test_stub_interface.py
test/data/qfield_project/: pytest-qfield-project_qfield.qgs
test/data/qgis_project/: pytest-qfield-project.qgs
test/data/simple_plugin/: main.qml
test/data/simple_plugin/js/: another_file.js  jslogic.js
test/data/stub_tester_plugin/: main.qml
test/visual/: test_plugin_visually.py
