[project]
name = "pytest-qfield"
description = "A pytest plugin for testing QField qml plugins"
readme = "README.md"
version = "0.2.3"
keywords = ["pytest", "QField", "GIS"]
license = "GPL-2.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest-qt",
    "pytest-qgis>=3.0.1",
    "PyQt6==6.9.1"
]

[project.urls]
homepage = "https://github.com/Joonalai/pytest-qfield"
repository = "https://github.com/Joonalai/pytest-qfield"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytest_qfield"
include = ["**/py.typed", "**/*.qml"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.entry-points.pytest11]
pytest-qfield = "pytest_qfield.plugin"

[tool.pytest.ini_options]
doctest_encoding = "utf-8"
env_files = [".env"]


[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
    "pytest-cov",
    "pytest-dotenv",
    "pytest-subtests",
    "pytest-mock>=3.15.1",
    ]
Lint = [
    "mypy",
    "prek",
    "ruff",
]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py310"

lint.select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "C90", # flake8, mccabe
    "E", # flake8, pycodestyle
    "F", # flake8, Pyflakes
    "I", # isort
    "INP", # flake8-no-pep420
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T", # flake8-print
    "ICN", # flake8-import-conventions
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W", # flake8, pycodestyle
    "UP", # pyupgrade
]

lint.unfixable = [
    "F401", # Unused imports
    "F841", # Unused variables
]

lint.external = ["QGS"]

[tool.ruff.lint.per-file-ignores]
"src/pytest_qfield/stub_interface/*" = ["N802", "N815"]
"src/pytest_qfield/qfield_resources.py" = ["N802", "ANN201", "INP"]
"test/*" = [
    "ANN001", # missing-type-function-argument
    "ANN201", # missing-return-type-undocumented-public-function
    "PLR2004", # magic-value-comparison
    "N802", # Function name should be lowercase
]

[tool.flake8]
select = [
  "QGS",
]
ignore = ["QGS103"]


[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
commit_message = """\
chore(release): {version}

Automatically generated by python-semantic-release
"""
build_command = """
    python -m pip install uv==0.10.9
    uv lock
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog]
mode = "init"
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.branches.main]
match = "(main)"
prerelease_token = "dev"
